{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 57,
  "lineage": "6ad75c94-356c-865c-cb7f-ff5d010d6dfd",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a664f4c572f2328",
            "arn": "arn:aws:ec2:us-east-1:005988779053:elastic-ip/eipalloc-06a664f4c572f2328",
            "association_id": "eipassoc-0ff7eedb1416685fe",
            "domain": "vpc",
            "id": "eipalloc-06a664f4c572f2328",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a453d6363aa3439c",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-98-88-204-159.compute-1.amazonaws.com",
            "public_ip": "98.88.204.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-nat-eip-1",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-nat-eip-1",
              "Project": "DevOpsPro Pipeline"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0925052c557570770",
            "arn": "arn:aws:ec2:us-east-1:005988779053:elastic-ip/eipalloc-0925052c557570770",
            "association_id": "eipassoc-0235b62bdcc385212",
            "domain": "vpc",
            "id": "eipalloc-0925052c557570770",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07da0a46be27e69b9",
            "private_dns": "ip-10-0-2-37.ec2.internal",
            "private_ip": "10.0.2.37",
            "public_dns": "ec2-3-85-70-221.compute-1.amazonaws.com",
            "public_ip": "3.85.70.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-nat-eip-2",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-nat-eip-2",
              "Project": "DevOpsPro Pipeline"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:internet-gateway/igw-0e546bcf0654a5cb6",
            "id": "igw-0e546bcf0654a5cb6",
            "owner_id": "005988779053",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-igw",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-igw",
              "Project": "DevOpsPro Pipeline"
            },
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a664f4c572f2328",
            "association_id": "eipassoc-0ff7eedb1416685fe",
            "connectivity_type": "public",
            "id": "nat-014916b2ef93481f4",
            "network_interface_id": "eni-0a453d6363aa3439c",
            "private_ip": "10.0.1.135",
            "public_ip": "98.88.204.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f5ca195d53c3c66a",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-nat-gateway-1",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-nat-gateway-1",
              "Project": "DevOpsPro Pipeline"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0925052c557570770",
            "association_id": "eipassoc-0235b62bdcc385212",
            "connectivity_type": "public",
            "id": "nat-0821d9c3bedd7201c",
            "network_interface_id": "eni-07da0a46be27e69b9",
            "private_ip": "10.0.2.37",
            "public_ip": "3.85.70.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-070265fcc861ddcf2",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-nat-gateway-2",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-nat-gateway-2",
              "Project": "DevOpsPro Pipeline"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:route-table/rtb-03e2bb49c5ea1b4f3",
            "id": "rtb-03e2bb49c5ea1b4f3",
            "owner_id": "005988779053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-014916b2ef93481f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-eks-private-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-eks-private-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:route-table/rtb-08893ddc942d65238",
            "id": "rtb-08893ddc942d65238",
            "owner_id": "005988779053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0821d9c3bedd7201c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-eks-private-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-eks-private-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:route-table/rtb-042abaa42487f6454",
            "id": "rtb-042abaa42487f6454",
            "owner_id": "005988779053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e546bcf0654a5cb6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-public-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-public-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rds_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:route-table/rtb-0a0d9102d1cb467ae",
            "id": "rtb-0a0d9102d1cb467ae",
            "owner_id": "005988779053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-014916b2ef93481f4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-rds-private-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-rds-private-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:route-table/rtb-01f9052da2e3145b8",
            "id": "rtb-01f9052da2e3145b8",
            "owner_id": "005988779053",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0821d9c3bedd7201c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-rds-private-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-rds-private-rt",
              "Project": "DevOpsPro Pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02174df247ef4889e",
            "route_table_id": "rtb-03e2bb49c5ea1b4f3",
            "subnet_id": "subnet-048047c1decee22d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.eks_private_rt",
            "module.network.aws_subnet.eks_private",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e7a4ce7c1312a13",
            "route_table_id": "rtb-08893ddc942d65238",
            "subnet_id": "subnet-061d110bae389dfa5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.eks_private_rt",
            "module.network.aws_subnet.eks_private",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0521db8cfcd7e63fe",
            "route_table_id": "rtb-042abaa42487f6454",
            "subnet_id": "subnet-0f5ca195d53c3c66a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d8182eb97e2966c",
            "route_table_id": "rtb-042abaa42487f6454",
            "subnet_id": "subnet-070265fcc861ddcf2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0656adc73f35a5eb3",
            "route_table_id": "rtb-0a0d9102d1cb467ae",
            "subnet_id": "subnet-0b3a5a9c2a6f07986"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.rds_private_rt",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_subnet.rds_private",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1f34a7e7445452e",
            "route_table_id": "rtb-01f9052da2e3145b8",
            "subnet_id": "subnet-0575d112a26e3ca45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.eip_nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.rds_private_rt",
            "module.network.aws_subnet.eks_public",
            "module.network.aws_subnet.rds_private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:security-group/sg-0533f351146732795",
            "description": "Security group do EKS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permite o trafego de saida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0533f351146732795",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permite o trafego HTTPS para o EKS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Permite o trafego interno entre os recursos do EKS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "homolog-eks-sg",
            "name_prefix": "",
            "owner_id": "005988779053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-eks-sg",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-eks-sg",
              "Project": "DevOpsPro Pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:security-group/sg-0646d1ca763317eee",
            "description": "Security group do RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permite o trafego de saida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0646d1ca763317eee",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.201.0/24",
                  "10.0.202.0/24"
                ],
                "description": "Permite acesso ao Postgres",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "homolog-rds-sg",
            "name_prefix": "",
            "owner_id": "005988779053",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-rds-sg",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-rds-sg",
              "Project": "DevOpsPro Pipeline"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permite o trafego de saida",
            "from_port": 0,
            "id": "sgrule-4025033839",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0533f351146732795",
            "security_group_rule_id": "sgr-0b0e8b197115c71b4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.eks",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permite o trafego HTTPS para o EKS",
            "from_port": 0,
            "id": "sgrule-1608562361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0533f351146732795",
            "security_group_rule_id": "sgr-05716905b96df2f3d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.eks",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_ingress_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Permite o trafego interno entre os recursos do EKS",
            "from_port": 0,
            "id": "sgrule-3923659902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0533f351146732795",
            "security_group_rule_id": "sgr-08c75a332f1ae55b6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.eks",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permite o trafego de saida",
            "from_port": 0,
            "id": "sgrule-3484605984",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0646d1ca763317eee",
            "security_group_rule_id": "sgr-0215a4675b91d9d16",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.rds",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.201.0/24",
              "10.0.202.0/24"
            ],
            "description": "Permite acesso ao Postgres",
            "from_port": 5432,
            "id": "sgrule-3929689229",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0646d1ca763317eee",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_security_group.rds",
            "module.network.aws_subnet.rds_private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:subnet/subnet-048047c1decee22d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048047c1decee22d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005988779053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-private-eks-subnet-1",
              "Project": "DevOpsPro Pipeline",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-private-eks-subnet-1",
              "Project": "DevOpsPro Pipeline",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:subnet/subnet-061d110bae389dfa5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061d110bae389dfa5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005988779053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-private-eks-subnet-2",
              "Project": "DevOpsPro Pipeline",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-private-eks-subnet-2",
              "Project": "DevOpsPro Pipeline",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:subnet/subnet-0f5ca195d53c3c66a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5ca195d53c3c66a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005988779053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-public-subnet-1",
              "Project": "DevOpsPro Pipeline",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-public-subnet-1",
              "Project": "DevOpsPro Pipeline",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:subnet/subnet-070265fcc861ddcf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070265fcc861ddcf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005988779053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-public-subnet-2",
              "Project": "DevOpsPro Pipeline",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-public-subnet-2",
              "Project": "DevOpsPro Pipeline",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:subnet/subnet-0b3a5a9c2a6f07986",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3a5a9c2a6f07986",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005988779053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-private-rds-subnet-1",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-private-rds-subnet-1",
              "Project": "DevOpsPro Pipeline"
            },
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:subnet/subnet-0575d112a26e3ca45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0575d112a26e3ca45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005988779053",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-private-rds-subnet-2",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-private-rds-subnet-2",
              "Project": "DevOpsPro Pipeline"
            },
            "vpc_id": "vpc-0bf653f304a50b8ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005988779053:vpc/vpc-0bf653f304a50b8ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b79420991d017a6",
            "default_route_table_id": "rtb-0d9694f737986741f",
            "default_security_group_id": "sg-0fa366116ddc7e603",
            "dhcp_options_id": "dopt-033124237471421b5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf653f304a50b8ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d9694f737986741f",
            "owner_id": "005988779053",
            "tags": {
              "Environment": "Homolog",
              "Name": "homolog-vpc",
              "Project": "DevOpsPro Pipeline"
            },
            "tags_all": {
              "Environment": "Homolog",
              "Name": "homolog-vpc",
              "Project": "DevOpsPro Pipeline"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}